--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,19 +12,22 @@
   },
   "dependencies": {
     "@note-book/shared": "*",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0",
-    "axios": "^1.7.7",
+    "react-router": "^7.11.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.23",
     "dotenv": "^17.2.3",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.11",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
     "vite": "^5.4.2"
   }
 }
