--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
     "zod": "^3.22.4"
   },
@@ -34,6 +35,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/multer": "^1.4.13",
     "@types/node": "^20.11.30",
     "@types/pg": "^8.10.9",
     "dotenv-cli": "^7.4.2",
