--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,36 @@
   },
   "dependencies": {
     "@note-book/shared": "*",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-toast": "^1.2.15",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "axios": "^1.7.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "lucide-react": "^0.363.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.51.0",
+    "react-markdown": "^9.0.1",
     "react-router": "^7.11.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^4.0.0",
+    "tailwind-merge": "^2.2.2",
+    "vditor": "^3.11.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.23",
     "dotenv": "^17.2.3",
@@ -28,6 +49,8 @@
     "eslint-plugin-react-refresh": "^0.4.11",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
+    "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.4.3",
     "vite": "^5.4.2"
   }
 }
