backend - feat(database): 添加数据库迁移和表结构，更新环境变量配置；frontend - feat(api): 支持通过环境变量配置 API 基础 URL，更新组件和样式

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "Note Book Backend API",
   "main": "dist/server.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "nodemon",
     "build": "tsc",
     "start": "node dist/server.js",
     "lint": "eslint src --ext .ts",
@@ -39,6 +39,7 @@
     "@types/node": "^20.11.30",
     "@types/pg": "^8.10.9",
     "dotenv-cli": "^7.4.2",
+    "nodemon": "^3.1.11",
     "prisma": "^7.1.0",
     "tsx": "^4.19.2"
   },
