github - chore(workflow): 更新 webpack.yml，使用 npm ci 安装依赖并优先构建共享包；shared - feat(package): 添加 exports 和 files 字段

--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -23,7 +23,10 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: Install dependencies
-      run: npm install
+      run: npm ci
+
+    - name: Build shared package first
+      run: npm run build --workspace=shared
 
     - name: Build application
       run: npm run build
