--- a/shared/package.json
+++ b/shared/package.json
@@ -4,6 +4,15 @@
   "description": "Shared types and utilities for Note Book",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc --build",
     "dev": "tsc --watch"
