--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,8 +14,7 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "@shared/*": ["../shared/src/*"],
-      "@note-book/shared": ["../shared/dist/index"]
+      "@shared/*": ["../shared/src/*"]
     }
   },
   "include": ["src"],
