--- a/shared/package.json
+++ b/shared/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@note-book/shared",
+  "name": "@shared",
   "version": "1.0.0",
   "description": "Shared types and utilities for Note Book",
   "main": "./dist/index.js",
