github - chore(workflow): 添加打印环境信息步骤，输出 Node.js、TypeScript 版本及 npm 依赖列表

--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -25,6 +25,17 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
+    - name: Print environment info
+      run: |
+        echo "=== Node.js Version ==="
+        node -v
+        echo ""
+        echo "=== TypeScript Version ==="
+        tsc --version
+        echo ""
+        echo "=== npm list ==="
+        npm list --depth=0
+
     - name: Clean TypeScript build cache
       run: |
         rm -f shared/tsconfig.tsbuildinfo
