--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "build:frontend": "npm run build --workspace=frontend",
     "lint": "npm run lint --workspaces",
     "lint:fix": "npm run lint:fix --workspaces",
-    "db:generate": "npm run db:generate --workspace=backend",
+    "db:generate": "npx prisma generate --schema=./backend/prisma/schema.prisma",
     "db:migrate": "npm run db:migrate --workspace=backend",
     "db:push": "npm run db:push --workspace=backend",
     "db:studio": "npm run db:studio --workspace=backend"
@@ -28,10 +28,10 @@
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.0.0",
+    "prisma": "^7.1.0",
     "typescript": "^5.4.3"
   },
   "engines": {
     "node": ">=18.17.0"
   }
 }
-
