github - chore(workflow): 更新部署脚本，创建后端和前端的部署目录

--- a/.github/workflows/webpack.yml
+++ b/.github/workflows/webpack.yml
@@ -92,7 +92,7 @@ jobs:
           ECS_DEPLOY_PATH: ${{ secrets.ECS_DEPLOY_PATH }}
         run: |
           # 创建部署目录
-          ssh $ECS_USER@$ECS_HOST "mkdir -p $ECS_DEPLOY_PATH"
+          ssh $ECS_USER@$ECS_HOST "mkdir -p $ECS_DEPLOY_PATH/backend $ECS_DEPLOY_PATH/frontend"
 
           # 上传构建产物
           scp -r backend/dist $ECS_USER@$ECS_HOST:$ECS_DEPLOY_PATH/backend/
