--- a/backend/package.json
+++ b/backend/package.json
@@ -9,16 +9,16 @@
     "start": "node dist/server.js",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
-    "db:generate": "node -e \"process.chdir('..'); require('child_process').execSync('npm run db:generate', {stdio: 'inherit'})\"",
+    "db:generate": "prisma generate --schema=./prisma/schema.prisma",
     "db:migrate": "dotenv -e ../../.env -- prisma migrate dev --config=./prisma/config.ts",
     "db:push": "dotenv -e ../../.env -- prisma db push --config=./prisma/config.ts",
     "db:studio": "dotenv -e ../../.env -- prisma studio"
   },
   "dependencies": {
-    "@prisma/adapter-pg": "^7.1.0",
-    "@prisma/client": "^7.2.0",
-    "@prisma/client-runtime-utils": "^7.2.0",
-    "bcrypt": "^5.1.1",
+    "@prisma/adapter-pg": "7.2.0",
+    "@prisma/client": "7.2.0",
+    "@prisma/client-runtime-utils": "7.2.0",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.21.1",
@@ -29,7 +29,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@prisma/config": "^7.1.0",
+    "@prisma/config": "7.2.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
@@ -39,7 +39,7 @@
     "@types/pg": "^8.10.9",
     "dotenv-cli": "^7.4.2",
     "nodemon": "^3.1.11",
-    "prisma": "^7.1.0",
+    "prisma": "7.2.0",
     "tsx": "^4.19.2"
   },
   "engines": {
