--- a/package.json
+++ b/package.json
@@ -29,8 +29,14 @@
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "eslint": "^9.0.0",
-    "prisma": "^7.1.0",
+    "prisma": "7.2.0",
     "typescript": "^5.4.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "prisma": "7.2.0",
+      "@prisma/client": "7.2.0"
+    }
   },
   "engines": {
     "node": ">=18.17.0"
