frontend - feat(dialogs): 添加笔记本和标签对话框组件，优化标签选择器，更新 AuthContext 和 API 安全存储操作

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,13 +16,17 @@
     "noUnusedParameters": true,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "composite": true,
     "baseUrl": ".",
     "paths": {
       "@shared/*": ["./shared/*"]
     }
   },
-  "include": [],
-  "exclude": ["node_modules", "dist", "**/dist", "**/node_modules"]
+  "files": [],
+  "exclude": ["node_modules", "dist", "**/dist", "**/node_modules"],
+  "references": [
+    { "path": "./shared" },
+    { "path": "./frontend" },
+    { "path": "./backend" }
+  ]
 }
 
