--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-router": "^7.11.0",
     "react-syntax-highlighter": "^16.1.0",
     "remark-gfm": "^4.0.0",
+    "swr": "^2.4.0",
     "tailwind-merge": "^2.2.2",
     "vditor": "^3.11.2",
     "zod": "^3.22.4"
